--- a/src/app/pages/symptom-form/symptom-form.page.html
+++ b/src/app/pages/symptom-form/symptom-form.page.html
@@ -1,10 +1,10 @@
 <!-- Encabezado de la página de registro de síntomas -->
-<ion-header>
-  <ion-toolbar>
+<ion-header class="header" translucent="true" fill="clear">
+  <ion-toolbar class="header">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Registro de Síntomas</ion-title>
+    <ion-title class="header">Registro de Síntomas</ion-title>
   </ion-toolbar>
 </ion-header>
 
