--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,8 +4,9 @@
 // Paleta de colores personalizada para Patita Sana
 :root {
   --green-matcha: #a4c084;
-  --green-matcha-dark: #7a9c5c;
+  --green-matcha-dark: #778a61;
   --green-matcha-light: #b0cca5;
+  --matcha-latte-clear: #e3ecd9;
   --white: #fff;
   --gray-bg: #f8f8f0;
   --text-dark: #333;
