--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,11 +1,10 @@
 <!-- Página de registro de usuario -->
 <div>
   <ion-content class="ion-page">
-
     <!-- Encabezado de registro -->
-    <ion-header>
-      <ion-toolbar class="ion-header">
-        <ion-title class="ion-header">Registro</ion-title>
+    <ion-header class="header" translucent="true" fill="clear">
+      <ion-toolbar class="header">
+        <ion-title class="header">Registro</ion-title>
       </ion-toolbar>
     </ion-header>
 
@@ -17,7 +16,6 @@
     <!-- Formulario de registro -->
     <ion-content class="ion-padding">
       <form (ngSubmit)="onRegister()">
-
         <!-- Campo: Nombre -->
         <ion-item class="input-item">
           <ion-label position="floating" class="input-label">Nombre</ion-label>
