--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -25,6 +25,15 @@ ion-menu .logout {
   font-family: "poppins", sans-serif;
   font-size: 25px;
   font-weight: 400;
+  white-space: normal !important;
+  overflow: visible !important;
+  text-overflow: unset !important;
+  word-break: break-word;
+  max-width: 100vw;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 ion-menu ion-label,
@@ -140,6 +149,15 @@ ion-content {
 .mascota-edad {
   font-size: 1rem;
   color: var(--text-dark);
+}
+
+.hola-de-nuevo {
+  text-align: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 
 @font-face {
